--- a/faqs.html
+++ b/faqs.html
@@ -9,6 +9,7 @@
     />
     <meta name="googlebot" content="noindex" />
     <meta name="robots" content="noindex, nofollow" />
+    <link rel="stylesheet" href="./assets/styles/aos.css" />
     <link rel="stylesheet" href="./assets/styles/output.css" />
     <title>
       GrandTransfer FAQ - Learn About Secure File Sharing & Data Protection |
@@ -37,7 +38,10 @@
       property="og:description"
       content="Our FAQ page addresses your top questions about GrandTransfer's secure file sharing services. Get insights on file management, understand our pricing structure, and learn how we safeguard your data. We're here to help you make informed decisions about your file transfer needs."
     />
-    <meta property="og:image" content="/assets/images/ogImage.jpg" />
+    <meta
+      property="og:image"
+      content="https://www.grandtransfer.io/assets/images/ogImage.jpg"
+    />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -54,7 +58,10 @@
       property="twitter:description"
       content="Our FAQ page addresses your top questions about GrandTransfer's secure file sharing services. Get insights on file management, understand our pricing structure, and learn how we safeguard your data. We're here to help you make informed decisions about your file transfer needs."
     />
-    <meta property="twitter:image" content="/assets/images/ogImage.jpg" />
+    <meta
+      property="twitter:image"
+      content="https://www.grandtransfer.io/assets/images/ogImage.jpg"
+    />
     <meta property="twitter:image:width" content="1200" />
     <meta property="twitter:image:height" content="630" />
     <meta
@@ -95,7 +102,7 @@
   </head>
   <body>
     <header
-      class="z-[2] absolute w-full top-0 left-0 lg:px-[5.20833333333vw] lg:py-[1.61458333333vw] sm:p-[4vw] p-[6vw]"
+      class="z-[12] fixed w-full top-0 left-0 lg:px-[5.20833333333vw] lg:py-[1.61458333333vw] sm:p-[4vw] p-[6vw]"
     >
       <div class="flex justify-between items-center">
         <a
@@ -119,7 +126,9 @@
             <li
               class="flex items-center lg:gap-x-[0.52083333333vw] sm:gap-x-[2vw] gap-x-[3vw] lg:hover:text-[#992861] transition-all duration-500"
             >
-              <a href="https://support.grandautomation.io/login">Support</a>
+              <a target="_blank" href="https://support.grandautomation.io/login"
+                >Support</a
+              >
               <img
                 src="./assets/images/icons/support.svg"
                 alt="support"
@@ -129,7 +138,9 @@
             <li
               class="text-[#992861] lg:hover:text-[#18181B] transition-all duration-500"
             >
-              <a href="https://app.grandtransfer.io/login">Log in</a>
+              <a target="_blank" href="https://app.grandtransfer.io/login"
+                >Log in</a
+              >
             </li>
           </ul>
         </nav>
@@ -149,8 +160,8 @@
           <div
             class="text-[#FFF] lg:w-[41.5625vw] pt-[30vw] pb-[12vw] sm:pt-[24vw] sm:pb-[10vw] lg:pb-[6.09375vw] lg:pt-[12.2395833333vw]"
           >
-            <h1 class="text60">FAQs</h1>
-            <p class="text22 lg:mt-[1.04166666667vw] mt1">
+            <h1 data-aos="fade-up" class="text60">FAQs</h1>
+            <p data-aos="fade-down" class="text22 lg:mt-[1.04166666667vw] mt1">
               Gain access to all information you require and effortlessly make
               well-informed choices as we have addressed all your file sharing
               inquiries right here.
@@ -167,7 +178,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 How does the setup process work and what can I expect after
                 joining GrandTransfer?
@@ -179,9 +190,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4vw] leading-[6.5vw] text-[#6B7280]"
+              >
                 Getting started with GrandTransfer is straightforward and
                 user-friendly. Upon signing up, you'll immediately gain access
                 to our cloud-based platform with no need for downloads or
@@ -196,7 +209,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 What benefits will I gain by upgrading to a paid plan with
                 GrandTransfer?
@@ -208,9 +221,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 By upgrading to a GrandTransfer paid plan, you’ll experience the
                 enhancements in capacity and capabilities. Enjoy expanded
                 storage and transfer limits, allowing you to store larger files
@@ -229,7 +244,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 What are Add-ons, and how can I use them with GrandTransfer?
               </h4>
@@ -240,9 +255,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 Add-ons in GrandTransfer are a flexible way to purchase
                 additional GB for storage or transfer as per your specific
                 needs. These are perfect for when you require more capacity
@@ -262,7 +279,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 Do my recipients need to sign up to download files from
                 GrandTransfer?
@@ -274,9 +291,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 No, recipients do not need to sign up or log in to download
                 files shared via GrandTransfer. We've designed our platform for
                 ease of use, ensuring that anyone you share files with can
@@ -290,7 +309,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 How does the 'Predefined Receivers' feature work in
                 GrandTransfer?
@@ -302,9 +321,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 The 'Predefined Receivers' feature in GrandTransfer enhances
                 security and convenience in file sharing. As a user, you can add
                 your recipients as 'Predefined Receivers.' They will receive an
@@ -325,7 +346,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 How do 'workspaces' work in GrandTransfer, and what should I
                 know about inviting team members?
@@ -337,9 +358,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 In GrandTransfer, 'workspaces' are collaborative spaces where
                 you and your team can manage files together. When you register
                 with GrandTransfer, a default workspace is automatically created
@@ -368,7 +391,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 What should I do if I exceed my storage limit on GrandTransfer?
               </h4>
@@ -379,9 +402,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 If you reach your storage limit on GrandTransfer, there are a
                 couple of options to manage your space. Firstly, you can free up
                 storage by permanently deleting files you no longer need. Keep
@@ -401,7 +426,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 What occurs if I exceed my monthly transfer limit on
                 GrandTransfer?
@@ -413,9 +438,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 At GrandTransfer, transfer limits are based on a monthly cycle.
                 If you reach your transfer limit within a month, any files you
                 attempt to share afterwards or has been shared won't be
@@ -435,7 +462,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 What file types can I upload and share on GrandTransfer, and is
                 there a limit to file size?
@@ -447,9 +474,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 On GrandTransfer, we support the upload and sharing of all file
                 types, offering you complete flexibility in managing and
                 distributing your data. Additionally, if you're sharing PDF
@@ -470,7 +499,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 How can I raise a support ticket if I need help with
                 GrandTransfer?
@@ -482,14 +511,16 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 If you require assistance or have any inquiries about our
                 service, you can easily raise a support ticket through our
                 dedicated platform at
                 <a
-                  class="text-[blue] underline"
+                  class="text-[#992861] underline"
                   href="https://support.grandautomation.io/"
                   target="_blank"
                   >https://support.grandautomation.io/</a
@@ -508,7 +539,7 @@
           >
             <div class="flex justify-between sm:items-center items-baseline">
               <h4
-                class="lg:text-[1.82291666667vw] sm:text-[3.604167vw] w-[85%] text35 text-[#18181B] lg:leading-[2.34375vw]"
+                class="lg:text-[1.45833333333vw] sm:text-[2.604167vw] w-[95%] text35 text-[#18181B] lg:leading-[2.34375vw]"
               >
                 How does canceling or downgrading my GrandTransfer subscription
                 work?
@@ -520,9 +551,11 @@
               />
             </div>
             <div
-              class="lg:w-[59.42%] w-[80%] faq_Ans transition-all duration-300 max-h-0 overflow-hidden opacity-0"
+              class="w-[95%] faq_Ans transition-all duration-[500ms] max-h-0 overflow-hidden"
             >
-              <p class="text22 text-[#6B7280]">
+              <p
+                class="lg:text-[1.14583333333vw] lg:leading-[1.66666666667vw] sm:text-[2.60416666667vw] sm:leading-[3.64583333333vw] text-[4.61538461538vw] leading-[7.17948717949vw] text-[#6B7280]"
+              >
                 If you choose to cancel or downgrade your GrandTransfer
                 subscription, the change will take effect at the start of your
                 next billing cycle, whether it's monthly or yearly. This means
@@ -540,7 +573,7 @@
           </div>
         </div>
       </section>
-      <section class="lg:pt-[13.0208333333vw] pt1">
+      <section class="lg:pt-[7.0208333333vw] pt1">
         <div
           class="relative sm:py-[12vw] py-[10vw] lg:pt-[4.27083333333vw] lg:pb-[8.02083333333vw] lg:px-[9.79166666667vw] sm:px-[6%] px-[5%] flex justify-end overflow-hidden"
         >
@@ -556,15 +589,19 @@
               class="mx-[auto] sm:w-[90%] lg:w-[81%] w-[81%] flex flex-col items-start"
             >
               <div class="text-[#18181B]">
-                <h3 class="text50">
+                <h3 data-aos="fade-up" class="text50">
                   We are here to assist you in any way we can
                 </h3>
-                <p class="text22 lg:mt-[1.04166666667vw] mt1">
+                <p
+                  data-aos="fade-down"
+                  class="text22 lg:mt-[1.04166666667vw] mt1"
+                >
                   You can reach out to our dedicated team. We're eager to
                   provide you with the assistance you need.
                 </p>
               </div>
               <a
+                target="_blank"
                 href="https://support.grandautomation.io/login"
                 class="lg:mt-[3.125vw] sm:mt-[5vw] mt-[8vw] bg-[#992861] btn"
               >
@@ -635,6 +672,7 @@
         </div>
       </div>
     </footer>
+    <script src="./assets/javascripts/aos.min.js"></script>
     <script src="./assets/javascripts/global.js"></script>
   </body>
 </html>
