--- a/index.html
+++ b/index.html
@@ -200,78 +200,285 @@
         class="sm:pt-[10.625vw] sm:pt-[10.4166666667vw] pt-[15.3846153846vw]"
       >
         <div
-          class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] mb-[24px] sm:mb-[3.64583333333vw]"
+          class="w- [90vw] w-[full] bg-white sm:w- [82.1354166667vw] px-[5vw] sm:px-[8.9322916667vw] mx-[auto] mb-[24px] sm:mb-[3.64583333333vw]"
         >
           <h2 class="text60 text-[#18181B]" data-aos="fade-up">
             Explore our powerful features
           </h2>
         </div>
-        <div
-          class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] flex flex-col-reverse lg:flex-row gap-y-[30px]"
-        >
+        <div class="flex flex-col gap-y-[10vw]">
           <div
-            class="w-full sm:h-[75vw] lg:h-[unset] lg:w-[35.2604166667vw] relative z-[2]"
+            class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] flex flex-col-reverse lg:flex-row gap-y-[30px]"
           >
             <div
-              data-aos="fade"
-              data-aos-delay="600"
-              class="featuresCard w-[35vw] lg:w-[17.5520833333vw] top-0 lg:top-[2.34375vw] left-[18vw] lg:left-[6.97916666667vw] absolute"
+              class="w-full h-[480px] sm:h-[75vw] lg:h-[unset] lg:w-[35.2604166667vw] relative z-[2]"
             >
-              <img
-                class="w-full"
-                src="./assets/images/home/pasSS.jpg"
-                alt="password screenshot"
-              />
+              <div
+                data-aos="fade"
+                data-aos-delay="600"
+                class="featuresCard w-[200px] sm:w-[35vw] lg:w-[17.5520833333vw] top-0 lg:top-[2.34375vw] left-[10px] sm:left-[18vw] lg:left-[6.97916666667vw] absolute"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/pasSS.jpg"
+                  alt="password screenshot"
+                />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="800"
+                class="featuresCard w-[80%] sm:w-[65vw] left-[6vw] lg:w-[29.6875vw] bottom-[60px] sm:bottom-[6.71875vw] lg:left-[2.55208333333vw] absolute"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/fileSS.jpg"
+                  alt="files screenshot"
+                />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="400"
+                class="featuresCard w-[150px] sm:w-[28vw] right-[2vw] lg:w-[12.7604166667vw] top-[100px] sm:top-[4.42708333333vw] lg:left-[24.0104166667vw] absolute"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/deviceSS.jpg"
+                  alt="device screenshot"
+                />
+              </div>
             </div>
             <div
-              data-aos="fade"
-              data-aos-delay="800"
-              class="featuresCard w-[65vw] left-[6vw] lg:w-[29.6875vw] bottom-[6.71875vw] lg:left-[2.55208333333vw] absolute"
+              class="lg:w-[46.875vw] relative pt-[180px] sm:pt-[40vw] lg:pt-0 lg:h-[43.0729166667vw] flex items-end rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
             >
-              <img
-                class="w-full"
-                src="./assets/images/home/fileSS.jpg"
-                alt="files screenshot"
-              />
-            </div>
-            <div
-              data-aos="fade"
-              data-aos-delay="400"
-              class="featuresCard w-[28vw] right-[2vw] lg:w-[12.7604166667vw] top-[4.42708333333vw] lg:left-[24.0104166667vw] absolute"
-            >
-              <img
-                class="w-full"
-                src="./assets/images/home/deviceSS.jpg"
-                alt="device screenshot"
-              />
+              <div
+                class="w-full h-[68%] sm:h-full absolute top-[15px] sm:top-[1vw] lg:top-[0.72916666666vw] left-0"
+              >
+                <img
+                  src="./assets/images/home/frame206.png"
+                  alt="frame"
+                  class="w-full h-full object-cover"
+                />
+              </div>
+              <div class="p-[24px] sm:p-[30px] lg:p-[3.64583333333vw] w-full">
+                <div class="sm:max-w-[66vw] lg:max-w-[31.0416666667vw]">
+                  <h5
+                    data-aos="fade-up"
+                    class="text50 mb-[16px] sm:mb-[1.5625vw]"
+                  >
+                    Secure and private file sharing
+                  </h5>
+                  <p data-aos="fade-down" class="text22">
+                    With features such as advanced encryption, password
+                    protection, screenshot prevention, and document expiry,
+                    ensure your confidential documents are shared the way you
+                    need them to be.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
           <div
-            class="lg:w-[46.875vw] relative pt-[180px] sm:pt-[40vw] lg:pt-0 lg:h-[43.0729166667vw] flex items-end rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
+            class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] flex flex-col lg:flex-row gap-y-[30px]"
           >
             <div
-              class="w-full h-[68%] sm:h-full absolute top-[15px] sm:top-[1vw] lg:top-[0.72916666666vw] left-0"
+              class="lg:w-[46.875vw] relative pb-[180px] sm:pb-[40vw] lg:pb-0 lg:h-[43.0729166667vw] flex items-start rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
             >
-              <img
-                src="./assets/images/home/frame206.png"
-                alt="frame"
-                class="w-full h-full object-cover"
-              />
+              <div
+                class="w-full h-[68%] sm:h-full absolute bottom-[15px] sm:bottom-[1vw] lg:bottom-[0.72916666666vw] left-0"
+              >
+                <img
+                  src="./assets/images/home/frame207.png"
+                  alt="frame"
+                  class="w-full h-full object-cover"
+                />
+              </div>
+              <div class="p-[24px] sm:p-[30px] lg:p-[3.64583333333vw] w-full">
+                <div class="sm:max-w-[66vw] lg:max-w-[31.0416666667vw]">
+                  <h5
+                    data-aos="fade-up"
+                    class="text50 mb-[16px] sm:mb-[1.5625vw]"
+                  >
+                    Facial recognition
+                  </h5>
+                  <p data-aos="fade-down" class="text22">
+                    When password protection and watermarking are not enough of
+                    a deterence, take it to the next level and gain ultimate
+                    security with facial recognition. Obtain proof of delivery
+                    and enhanced security by enabling file access via registered
+                    faces, or alternatively enable file access only after a face
+                    has been recognized and captured.
+                  </p>
+                </div>
+              </div>
             </div>
-            <div class="p-[24px] sm:p-[30px] lg:p-[3.64583333333vw] w-full">
-              <div class="sm:max-w-[66vw] lg:max-w-[31.0416666667vw]">
-                <h5
-                  data-aos="fade-up"
-                  class="text50 mb-[16px] sm:mb-[1.5625vw]"
+            <div
+              class="w-full h-[300px] sm:h-[63vw] lg:h-[unset] lg:w-[35.2604166667vw] relative z-[2]"
+            >
+              <div
+                data-aos="fade"
+                data-aos-delay="600"
+                class="w-[250px] sm:w-[50vw] right-[8vw] top-[15vw] lg:w-[24.1875vw] lg:h-[24.1875vw] absolute lg:top-[7.8125vw] lg:right-0"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/frame.png"
+                  alt="password screenshot"
+                />
+                <img
+                  src="./assets/images/home/profile.png"
+                  alt=""
+                  class="absolute w-[64%] top-[50%] left-[50%] transform translate-x-[-50%] translate-y-[-50%]"
+                />
+              </div>
+              <div
+                class="w-[40vw] top-[9vw] left-0 lg:w-[20vw] absolute lg:left-[-3vw] lg:top-[5vw]"
+              >
+                <img src="/assets/images/home/access.png" class="w-full" />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="800"
+                class="top-[2vw] right-[2vw] absolute w-[45vw] sm:w-[40vw] lg:w-[18vw]"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/facial.png"
+                  alt="files screenshot"
+                />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="400"
+                class="w-[80px] sm:w-[20vw] left-[60px] sm:left-[21vw] bottom-[60px] sm:bottom-[24vw] lg:w-[10vw] absolute lg:bottom-[18vw] lg:left-[9vw]"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/capture.png"
+                  alt="device screenshot"
+                />
+              </div>
+            </div>
+          </div>
+          <div
+            class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] flex flex-col-reverse lg:flex-row gap-y-[30px]"
+          >
+            <div
+              class="w-full h-[300px] sm:h-[75vw] lg:h-[unset] lg:w-[35.2604166667vw] relative z-[2]"
+            >
+              <div
+                data-aos="fade"
+                data-aos-delay="400"
+                class="absolute top-[-6.2vw] sm:top-[5.8vw] left-[3vw] w-[55vw] sm:w-[50vw] lg:w-[25.875vw]"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/text.png"
+                  alt="device screenshot"
+                />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="600"
+                class="featuresCard w-[42vw] sm:w-[35vw] lg:w-[16.71875vw] bottom-[3.90625vw] right-[7vw] lg:right-[-5vw] absolute"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/watermark.png"
+                  alt="password screenshot"
+                />
+              </div>
+            </div>
+            <div
+              class="lg:w-[46.875vw] relative pt-[180px] sm:pt-[40vw] lg:pt-0 lg:h-[43.0729166667vw] flex items-end rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
+            >
+              <div
+                class="w-full h-[68%] sm:h-full absolute top-[15px] sm:top-[1vw] lg:top-[0.72916666666vw] left-0"
+              >
+                <img
+                  src="./assets/images/home/frame206.png"
+                  alt="frame"
+                  class="w-full h-full object-cover"
+                />
+              </div>
+              <div class="p-[24px] sm:p-[30px] lg:p-[3.64583333333vw] w-full">
+                <div
+                  class="sm:max-w-[66vw] lg:max-w-[31.0416666667vw] lg:ml-[8.33333333333vw]"
                 >
-                  Secure and private file sharing
-                </h5>
-                <p data-aos="fade-down" class="text22">
-                  With features such as advanced encryption, password
-                  protection, screenshot prevention, and document expiry, ensure
-                  your confidential documents are shared the way you need them
-                  to be.
-                </p>
+                  <h5
+                    data-aos="fade-up"
+                    class="text50 mb-[16px] sm:mb-[1.5625vw]"
+                  >
+                    Automated watermarks
+                  </h5>
+                  <p data-aos="fade-down" class="text22">
+                    Save time and effort with dynamic automated watermarking.
+                    Easily and quickly watermark your documents with
+                    customizable settings for each document and recipient. Deter
+                    unauthorized document sharing.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="w-[90vw] sm:w-[82.1354166667vw] mx-[auto] flex flex-col lg:flex-row gap-y-[30px]"
+          >
+            <div
+              class="lg:w-[46.875vw] relative pb-[180px] sm:pb-[40vw] lg:pb-0 lg:h-[43.0729166667vw] flex items-start rounded-[12px] lg:rounded-[0.625vw] bg-[#F4F5F7]"
+            >
+              <div
+                class="w-full h-[68%] sm:h-full absolute bottom-[15px] sm:bottom-[1vw] lg:bottom-[0.72916666666vw] left-0"
+              >
+                <img
+                  src="./assets/images/home/frame207.png"
+                  alt="frame"
+                  class="w-full h-full object-cover"
+                />
+              </div>
+              <div class="p-[24px] sm:p-[30px] lg:p-[3.64583333333vw] w-full">
+                <div class="sm:max-w-[66vw] lg:max-w-[31.0416666667vw]">
+                  <h5
+                    data-aos="fade-up"
+                    class="text50 mb-[16px] sm:mb-[1.5625vw]"
+                  >
+                    Detailed analytics and tracking
+                  </h5>
+                  <p data-aos="fade-down" class="text22">
+                    Keep track of who viewed your files, as well as the location
+                    and number of views, prints, and downloads.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div
+              class="w-full h-[300px] sm:h-[63vw] lg:h-[unset] lg:w-[35.2604166667vw] relative z-[2]"
+            >
+              <div
+                data-aos="fade"
+                data-aos-delay="600"
+                class="featuresCard w-[70vw] lg:w-[31.4583333333vw] top-[13.3333333333vw] right-[8.33333333333vw] absolute"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/analytics.png"
+                  alt="password screenshot"
+                />
+              </div>
+              <div
+                class="absolute w-[25vw] right-[-2vw] top-[6vw] lg:w-[15vw] lg:right-0 lg:top-[13vw]"
+              >
+                <img src="/assets/images/home/analytics2.png" class="w-full" />
+              </div>
+              <div
+                data-aos="fade"
+                data-aos-delay="800"
+                class="featuresCard absolute w-[60vw] lg:w-[33.6458333333vw] left-[-2vw] top-[1vw] lg:top-[6.5vw]"
+              >
+                <img
+                  class="w-full"
+                  src="./assets/images/home/analytics3.png"
+                  alt="files screenshot"
+                />
               </div>
             </div>
           </div>
